# kwin-arhud-warping

./: .clang-format  .gitignore  CMakeLists.txt  README.md  REUSE.toml
src/: CMakeLists.txt  MatrixTextureModel.cxx  MatrixTextureModel.hxx  WarpingConstants.cxx  WarpingConstants.hxx  WarpingMatrixInterpolationModel.cxx  WarpingMatrixInterpolationModel.hxx  WarpingUtils.hxx  arhud.cpp  arhud.h  classicArHud.cpp  classicArHud.h  defaultHud.cpp  defaultHud.h  main.cpp  metadata.json  shaders.qrc  warpingEffect.cpp  warpingEffect.h
src/arhud-matrix/: CMakeLists.txt  WarpingUtils.cxx
src/shaders/: warping_arhud_classic_core.frag  warping_core.vert  warping_default_core.frag  warping_default_core.vert
src/wayland/: CMakeLists.txt  MBitionMiniHudWarping.cpp  MBitionMiniHudWarping.h  MBitionMiniHudWarpingManager.cpp  MBitionMiniHudWarpingManager.h  MBitionWarpedOutput.cpp  MBitionWarpedOutput.h  MBitionWarpedOutputManager.cpp  MBitionWarpedOutputManager.h
